--- a/style.css
+++ b/style.css
@@ -1,242 +1,302 @@
 html {
     background-color:#020659;
-}
-* {
-  box-sizing:border-box;
-  padding:0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 body {
     width:90%;
     margin:0 auto;
     min-width:375px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+    background-color: white;
 }
-/* header */
+#hide {
+  display: none;
+}
+p {
+  font-size: 1em;
+}
+#small a {
+  color:white;
+  text-decoration: none;
+}
  h1 {
     color:white;
     font-size:1.25em;
 }
 h2 h3 {
     font-size: 1em;
+}
+.button {
+  color:white;
+  background-color: #590242 ;
+  border-radius: 8px;
+  padding:10px;
+  width:250px;
+  border:0;
+  margin:10px;
+  position: relative;
+  left:10%;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #020659;
+}
+/* header */
+.header {
+  background-color: #030A8C;
+  position: relative;
+  width: 100%;
+}
+.header ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #030A8C;
+}
+ .header li a {
+  text-decoration: none;
+  color:white;
+  padding: 10px;
+  display: block;
+  border-left: 1px solid #f4f4f4;
+}
+nav {
+  display:none;
+}
+.header .menu-btn:checked ~ nav {
+  display:block;
+}
+.header li a:hover,
+.header .menu-btn:hover {
+  background-color: #590242;
+}
+.header #small {
+  display: block;
+  text-align-last: center;
+  padding: 20px 10px;
+  margin:0%;
+  text-decoration: none;
+}
+.header .menu {
+  clear: both;
+  max-height: 500px;
+  transition: max-height .2s ease-out;
+}
+.header .menu-icon {
+  cursor: pointer;
+  float: left;
+  top:-60px;
+  padding: 28px 20px;
+  position:relative;
+  user-select: none;
+}
+.header .menu-icon .navicon {
+  background: white;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition:  .2s ease-out;
+  width: 18px;
+}
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background:white;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+.header .menu-icon .navicon:before {
+  top: 5px;
+}
 
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
 }
 #smooth {
- order:2;
- background-image: linear-gradient(to right, #2014D9 , black);
- color:white;
- padding: 10px;
- padding-top: 0%;
-}
-/* --------------------- */
-
-
-/*----------*/
-
-.trending, .curated, .playlists > h3 {
-  color:#590242;
-}
-
+      background-image: linear-gradient(to right, #2014D9 , black);
+      color:white;
+      padding: 10px;
+      position: relative;
+     }
+     .hscroll {
+      background-color: white;
+      display:grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      overflow-x:auto;
+      overflow-y: hidden;
+     }
+     .hscroll section {
+      margin:10px;
+      position:relative;
+     }
+     .hscroll div {
+      position: absolute;
+      top:251px;
+      background-color: rgba(255,255,255,.75);
+      padding:5px;
+      height:50px;
+      width:350px;
+     }
+     dl {
+      display:flex;
+     }
+     dt {
+      padding-right:5px;
+      padding-bottom:10px;
+     }
+     audio {
+      position:absolute;
+      bottom:150px;
+      left:5px;
+     }
+     .controls {
+      opacity: 70%;
+     }
+     #trend ::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 15px #590242;
+     }
+     #trend ::-webkit-scrollbar {
+      width: 15px;
+    }
+    #trend ::-webkit-scrollbar-thumb {
+      background: #590242;
+      border-radius: 5px;
+    }
+    #trend ::-webkit-scrollbar-thumb:hover {
+      background: #020659;
+    }
+    #trend {
+      background-color: white;
+    }
+    #trend {
+      margin:0px;
+      padding:10px;
+    }
+    #trend h2 {
+      color:#590242;
+    }
+     dl dt {
+      color:#590242;
+    }
+      /*---------------*/
  /*playlists and curated narrow*/
- @media screen and (max-width:834px) {
-  .flex {
-    display: grid;
-    grid-auto-rows: 50%;
-    background-color: white;
-  }
   .playlists {
     background-color:#2699FB;
     display:grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 21%;
-    overflow-x:auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    overflow:scroll;
     color:white;
-    padding:0px;
-    margin:0px;
-    border:0px;
   }
-  .curated {
-    background-color: #030A8C;
-    display:grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 21%;
-    overflow-x:auto;
-    color:white;
-    padding:0px;
+  #playlists > h3 {
+    margin-left: 10px;
+    color:#590242;
   }
   #Pp {
+    background-color:#0D8DF8;
+    border-radius: 8px;
+    margin: 10px;
+    padding:10px;
+    }
+  .playlists::-webkit-scrollbar {
+    height:10px;
+    width:100%;
+  }
+  .playlists::-webkit-scrollbar-track {
+    background: #0D8DF8;
+    box-shadow: inset 0 0 10px black;
+  }
+  .playlists::-webkit-scrollbar-thumb {
+    background: #020659;
+    border-radius: 2px;
+  }
+  .playlists::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  .curated {
+    background-color:#030A8C;
+    grid:0/2;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    overflow:scroll;
+    color:white;
+  }
+  #CP {
+    background-color:#020873;
+    border-radius: 8px;
+    margin: 10px;
+    padding:10px;
+    } 
+  #curated > h3 {
+    margin-left: 10px;
+    color:#590242;
+  } 
+  .curated::-webkit-scrollbar {
+    height:10px;
+    width:100%;
+  }
+  .curated::-webkit-scrollbar-track {
+    background: #0D8DF8;
+    box-shadow: inset 0 0 10px black;
+  }
+  .curated::-webkit-scrollbar-thumb {
+    background: #020659;
+    border-radius: 2px;
+  }
+  .curated::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
+ @media screen and (min-width:834px) {      
+      .flex {
+     display:grid;
+     grid-template-columns: 1fr 1fr;
+      }
+.playlists {
+  display:inline-block;
+  max-height: 500px;
+  overflow:scroll;
+}
+#Pp {
   background-color:#0D8DF8;
   border-radius: 8px;
   margin: 10px;
   padding:10px;
-  }
-  #CP {
-  background-color:#020873;
-  border-radius: 8px;
-  margin: 10px;
-  padding:10px;
-  }
-
-  /*header*/
-
-h1  a {
-   display:flex;
-  justify-content: center;
-   background-color:#030A8C;
-   margin: 0%;
-   padding:10px;
-   text-decoration:none;
-   color: white;
-
-  }
-nav a:hover {
-    background-color:#590242;
-    color:white;
-}
-#smooth {
-  z-index: 2;
-  order:2;
-}
-/*-----------------------------$$$$$*/
-.header {
-  background-color: #030A8C;
   display:grid;
-  grid-template-rows: auto;
-  position: relative;
-  width: 100%;
-  z-index: 1;
-}
-.header ul {
-  display:none;
+  grid-template-columns: 1fr 2fr;
   }
- .menu-btn:hover .header ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  background-color: #030A8C;
-  z-index: 3;
-  overflow: hidden;
-  display:block;
-  float: left;
-  position:relative;
-
-}
-.header li a {
-  display: block;
-  padding: 10px 100px;
-  color:white;
-  text-decoration: none;
-}
-.menu-btn {
-  width: 20px;
-  cursor: pointer;
-  display:block;
-  margin:10px;
-}
-}
-/*----------------*/
-
-
- /*playlists and curated*/
- @media screen and (min-width:834px) {      
-      .flex {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        background-color: white;
-        align-content: center;
-      }
-      .playlists {
-        background-color:#2699FB;
-        color:white;
-        padding:0px;
-        height: 500px; 
-        overflow-y: scroll;
-      }
-      .curated {
-        background-color: #030A8C;
-        padding:0px;
-        color:white;
-        height: 500px; 
-        overflow-y: scroll;
-    }
-    #Pp {
-      background-color:#0D8DF8;
-      border-radius: 8px;
-      margin: 10px;
-      padding:10px;
-    }
-    #CP {
-      background-color:#020873;
-      border-radius: 8px;
-      margin: 10px;
-      padding:10px;
-    }
-  .header ul {
-    text-decoration:none;
-    background-color:#030A8C;
-    order:1;
-    padding:0px;
-    margin:0px;
-    width:100%;
-    }
-.header {
-  display:grid;
-  margin:0px;
-  padding: 0px;
-}
-.header li {
-        list-style:none;
-        background-color:#030A8C;
-      }
-nav ul {
-    display:grid;
-    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
-    background-color:#030A8C;
-  }
-.header a {
-    text-decoration:none;
-    display:block;
-    text-align:center;
-    padding:10px;
-    color:white;
-    background-color:#030A8C;
-  }
-nav a:hover {
-    background-color:#590242;
-    color:white;
-}
-.hfirst{
-  display:none;
-}
-.menu-btn {
-  display: none;
-}
-  }
-
-.button {
-  margin-left: 50%;
-}
-/*----------------*/
-
-/*playlists and trending and curated scroll*/
-.curated::-webkit-scrollbar {
-  width: 10px;
-}
-.curated::-webkit-scrollbar-track {
-  background: #0D8DF8;
-}
-.curated::-webkit-scrollbar-thumb {
-  background: #020659;
-  border-radius: 2px;
-}
-.curated::-webkit-scrollbar-thumb:hover {
-  background: #555;
+.poo {
+padding:5px;
 }
 .playlists::-webkit-scrollbar {
-  width: 10px;
+  height:100%;
+  width:10px;
 }
 .playlists::-webkit-scrollbar-track {
   background: #0D8DF8;
+  box-shadow: inset 0 0 10px black;
 }
 .playlists::-webkit-scrollbar-thumb {
   background: #020659;
@@ -245,124 +305,58 @@ nav a:hover {
 .playlists::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-.trending::-webkit-scrollbar {
-  width: 10px;
+.curated {
+  display:inline-block;
+  max-height: 500px;
+  overflow:scroll;
+ }
+ #CP {
+  background-color:#020659;
+  border-radius: 8px;
+  margin: 10px;
+  padding:10px;
+  display:grid;
+  grid-template-columns: 1fr 2fr;
+  }
+ .curated::-webkit-scrollbar {
+  height:100%;
+  width:10px;
 }
-.trending::-webkit-scrollbar-track {
+.curated::-webkit-scrollbar-track {
   background: #0D8DF8;
+  box-shadow: inset 0 0 10px black;
 }
-.trending::-webkit-scrollbar-thumb {
+.curated::-webkit-scrollbar-thumb {
   background: #020659;
   border-radius: 2px;
 }
-.trending::-webkit-scrollbar-thumb:hover {
+.curated::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-/*------------*/
 
-/*playlist and trending and curated h3 */
-#play > h3 {
-  background-color: white;
-  margin:0px 0px 0px 0px ;
-  border:0px;
-  color:#590242;
-  padding: 10px;
+ .menu-btn, .menu-icon {
+  display:none;
 }
-#Pcurated > h3 {
-  background-color: white;
-  margin:0px 0px 0px 0px ;
-  border:0px;
-  color:#590242;
-  padding: 10px;
+.header #small {
+  display: none;
 }
-#trend > h3 {
-  background: white;
-  color:#590242;
-  margin:0px;
-  padding:20px;
+nav {
+  display:contents;
 }
-/*---------------*/
-
-/*playlist and trending and curated buttons */
-#Pbutton{
-  background-color: white;
-  padding-left:220px;
-  padding-top: 10px;;
+nav ul {
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
-#Cbutton{
-  background-color: white;
-  padding-top: 10px;;
-  padding-left:220px;
-
+.header ul a {
+  border-left:none;
 }
-#Tbutton {
-background-color: white;
-padding:10px;
-justify-content: right;
-}
-.button {
-  color:white;
-  background-color: #590242 ;
-  border-radius: 8px;
-  padding:8px 50px;
-  border:0;
-  margin:0;
-  cursor: pointer;
-}
-.button:hover {
-  background-color: #020659;
-}
-/*---------------*/
-
-/*trending container*/
-.trending {
-background-color: white;
-padding:10px;
-max-height: 500px;
-display: flex;
-overflow: hidden;
-overflow-x: auto;
-}
-#tbutton {
-  margin-left:80%;
-}
-#trendingbutton {
-  background-color: white;
-  padding: 10px;
-}
-
-/*---------------*/
-.controls {
-  display:inline-block;
-  z-index: 3;
-  position:relative;
-  left:4%;
-  width:90%;
-  bottom:40%;
-  opacity:60%;
-  order:1;
-}
-.img {
-  z-index: 1;
-  order:3;
-  padding:10px;
-}
-#caption {
-  display:block;
+.header {
+  background-color: #030A8C;
   position: relative;
-  top:337px;
-  padding-left:10px;
-  z-index: 2;
-  background-color: white;
-  opacity: 50%;
-  margin-bottom: 0%;
+  width: 100%;
 }
-#trending {
-  display:inline-block;
-  width:500px;
-  height:500px;
 }
-/*footer*/
+
 footer {
   padding:20px;
   text-align: center;
